--- a/posts/2014-04-23-r-s4-rootfinding.qmd
+++ b/posts/2014-04-23-r-s4-rootfinding.qmd
@@ -42,39 +42,51 @@ $$\dfrac{\partial \pi_i}{\partial q_i} = (q1+q2)^{-\dfrac{1}{\eta}} - \dfrac{1}{
 
 <p>If we want to find the optimal quantities \(q_1\) and \(q_2\) we need to program the optimality condition and we could also use the jacobian of the optimality condition. The jacobian is generally useful to speed up the root finding routines. This is were OOP is useful. First let&#39;s create a new class, called <em>Model</em>:</p>
 
-<pre><code class="r">setClass(Class = &quot;Model&quot;, slots = list(OptimCond = &quot;function&quot;, JacobiOptimCond = &quot;function&quot;))
-</code></pre>
+
+```{r}
+#| eval: false
+setClass(Class = "Model", slots = list(OptimCond = "function", JacobiOptimCond = "function"))
+```
 
 <p>This new class has two <em>slots</em>, which here are functions (in general <em>slots</em> are properties of your class); we need the model to return the optimality condition and the jacobian of the optimality condition.</p>
 
 <p>Now we can create a function which will return these two functions for certain values of the parameters, <em>c</em> and  <img src="http://latex.codecogs.com/png.latex?\inline \eta" alt="\inline \eta" /> of the model:</p>
 
-<pre><code class="r">my_mod &lt;- function(eta, c) {
+```{r}
+#| eval: false
+my_mod <- function(eta, c) {
     e = -1/eta
 
-    OptimCond &lt;- function(q) {
+    OptimCond <- function(q) {
         return(sum(q)^e + e * sum(q)^(e - 1) * q - diag(c) %*% q)
     }
 
     JacobiOptimCond &lt;- function(q) {
-        return((e * sum(q)^e) * array(1, c(2, 2)) + (e * sum(q)^(e - 1)) * diag(1, 
-            2) + (e - 1) * e * sum(q)^(e - 2) * q * c(1, 1) - diag(c))
+      return(
+        (e * sum(q)^e) * array(1, c(2, 2)) +
+        (e * sum(q)^(e - 1)) * diag(1, 2) +
+        (e - 1) * e * sum(q)^(e - 2) * q * c(1, 1) - diag(c)
+      )
     }
 
-    return(new(&quot;Model&quot;, OptimCond = OptimCond, JacobiOptimCond = JacobiOptimCond))
+    return(new("Model", OptimCond = OptimCond, JacobiOptimCond = JacobiOptimCond))
 
 }
-</code></pre>
+```
 
 <p>The function <code>my_mod</code> takes two parameters, <code>eta</code> and <code>c</code> and returns two functions, the optimality condition and the jacobian of the optimality condition. Both are now accessible via <code>my_mod(eta=1.6,c = c(0.6,0.8))@OptimCond</code> and <code>my_mod(eta=1.6,c = c(0.6,0.8))@JacobiOptimCond</code> respectively (and by specifying values for <code>eta</code> and <code>c</code>).</p>
 
 <p>Now, we can use the <code>rootSolve</code> package to get the optimal values \(q_1\) and \(q_2\) </p>
 
-<pre><code class="r">library(&quot;rootSolve&quot;)
+```{r}
+#| eval: false
+library("rootSolve")
 
-multiroot(f = my_mod(eta = 1.6, c = c(0.6, 0.8))@OptimCond, start = c(1, 1), 
-    maxiter = 100, jacfunc = my_mod(eta = 1.6, c = c(0.6, 0.8))@JacobiOptimCond)
-</code></pre>
+multiroot(f = my_mod(eta = 1.6, c = c(0.6, 0.8))@OptimCond,
+          start = c(1, 1),
+          maxiter = 100,
+          jacfunc = my_mod(eta = 1.6, c = c(0.6, 0.8))@JacobiOptimCond)
+```
 
 <pre><code>## $root
 ## [1] 0.8396 0.6888
@@ -97,26 +109,31 @@ multiroot(f = my_mod(eta = 1.6, c = c(0.6, 0.8))@OptimCond, start = c(1, 1),
 
 <p>I posted this blog post on the rstats subbreddit on <a href="http://www.reddit.com">www.reddit.com</a>. I got a very useful comment by reddit member TheDrownedKraken which suggested the following approach, which doesn&#39;t need a new class to be build. I thank him for this. Here is his suggestion:</p>
 
-<pre><code class="r">generator &lt;- function(eta, a) {
+```{r}
+#| eval: false
+generator <- function(eta, a) {
     e = -1/eta
 
-    OptimCond &lt;- function(q) {
+    OptimCond <- function(q) {
         return(sum(q)^e + e * sum(q)^(e - 1) * q - diag(a) %*% q)
     }
 
-    JacobiOptimCond &lt;- function(q) {
-        return((e * sum(q)^e) * array(1, c(2, 2)) + (e * sum(q)^(e - 1)) * diag(1, 
-            2) + (e - 1) * e * sum(q)^(e - 2) * q * c(1, 1) - diag(a))
+    JacobiOptimCond <- function(q) {
+      return(
+        (e * sum(q)^e) * array(1, c(2, 2)) +
+        (e * sum(q)^(e - 1)) * diag(1, 2) +
+        (e - 1) * e * sum(q)^(e - 2) * q * c(1, 1) - diag(a)
+      )
     }
 
     return(list(OptimCond = OptimCond, JacobiOptimCond = JacobiOptimCond))
 
 }
 
-f.s &lt;- generator(eta = 1.6, a = c(0.6, 0.8))
+f.s <- generator(eta = 1.6, a = c(0.6, 0.8))
 
 multiroot(f = f.s$OptimCond, start = c(1, 1), maxiter = 100, jacfunc = f.s$JacobiOptimCond)
-</code></pre>
+```
 
 <pre><code>## $root
 ## [1] 0.8396 0.6888
