--- a/posts/2017-03-24-lesser_known_purrr.qmd
+++ b/posts/2017-03-24-lesser_known_purrr.qmd
@@ -13,7 +13,7 @@ the table and in this post I show you some of the most useful (at least to me) f
 <h2>Getting rid of loops with <code>map()</code></h2>
 <pre class="r"><code>library(purrr)
 
-numbers &lt;- list(11, 12, 13, 14)
+numbers <- list(11, 12, 13, 14)
 
 map_dbl(numbers, sqrt)</code></pre>
 <pre><code>## [1] 3.316625 3.464102 3.605551 3.741657</code></pre>
@@ -27,7 +27,7 @@ this is very common. However, with the <code>map()</code> family of functions, t
 <div id="map_if" class="section level4">
 <h4>map_if()</h4>
 <pre class="r"><code># Create a helper function that returns TRUE if a number is even
-is_even &lt;- function(x){
+is_even <- function(x){
   !as.logical(x %% 2)
 }
 
@@ -65,7 +65,7 @@ function only when certain conditions are met, which is also something that a lo
 </div>
 <div id="map-a-function-with-multiple-arguments" class="section level2">
 <h2>Map a function with multiple arguments</h2>
-<pre class="r"><code>numbers2 &lt;- list(1, 2, 3, 4)
+<pre class="r"><code>numbers2 <- list(1, 2, 3, 4)
 
 map2(numbers, numbers2, `+`)</code></pre>
 <pre><code>## [[1]]
@@ -85,9 +85,9 @@ of lists to any function using <code>pmap()</code>.</p>
 </div>
 <div id="dont-stop-execution-of-your-function-if-something-goes-wrong" class="section level2">
 <h2>Don’t stop execution of your function if something goes wrong</h2>
-<pre class="r"><code>possible_sqrt &lt;- possibly(sqrt, otherwise = NA_real_)
+<pre class="r"><code>possible_sqrt <- possibly(sqrt, otherwise = NA_real_)
 
-numbers_with_error &lt;- list(1, 2, 3, &quot;spam&quot;, 4)
+numbers_with_error <- list(1, 2, 3, &quot;spam&quot;, 4)
 
 map(numbers_with_error, possible_sqrt)</code></pre>
 <pre><code>## [[1]]
@@ -112,7 +112,7 @@ This is possible by combining <code>map()</code> and <code>possibly()</code>. Mo
 </div>
 <div id="dont-stop-execution-of-your-function-if-something-goes-wrong-and-capture-the-error" class="section level2">
 <h2>Don’t stop execution of your function if something goes wrong and capture the error</h2>
-<pre class="r"><code>safe_sqrt &lt;- safely(sqrt, otherwise = NA_real_)
+<pre class="r"><code>safe_sqrt <- safely(sqrt, otherwise = NA_real_)
 
 map(numbers_with_error, safe_sqrt)</code></pre>
 <pre><code>## [[1]]
@@ -144,7 +144,7 @@ map(numbers_with_error, safe_sqrt)</code></pre>
 ## [1] NA
 ## 
 ## [[4]]$error
-## &lt;simpleError in sqrt(x = x): non-numeric argument to mathematical function&gt;
+## <simpleError in sqrt(x = x): non-numeric argument to mathematical function&gt;
 ## 
 ## 
 ## [[5]]
@@ -159,7 +159,7 @@ returns the error message.</p>
 </div>
 <div id="transpose-a-list" class="section level2">
 <h2>Transpose a list</h2>
-<pre class="r"><code>safe_result_list &lt;- map(numbers_with_error, safe_sqrt)
+<pre class="r"><code>safe_result_list <- map(numbers_with_error, safe_sqrt)
 
 transpose(safe_result_list)</code></pre>
 <pre><code>## $result
@@ -190,7 +190,7 @@ transpose(safe_result_list)</code></pre>
 ## NULL
 ## 
 ## $error[[4]]
-## &lt;simpleError in sqrt(x = x): non-numeric argument to mathematical function&gt;
+## <simpleError in sqrt(x = x): non-numeric argument to mathematical function&gt;
 ## 
 ## $error[[5]]
 ## NULL</code></pre>
@@ -200,7 +200,7 @@ all the results (which you can then access with `safe_result_list$result`) and t
 </div>
 <div id="apply-a-function-to-a-lower-depth-of-a-list" class="section level2">
 <h2>Apply a function to a lower depth of a list</h2>
-<pre class="r"><code>transposed_list &lt;- transpose(safe_result_list)
+<pre class="r"><code>transposed_list <- transpose(safe_result_list)
 
 transposed_list %&gt;%
     at_depth(2, is_null)</code></pre>
@@ -242,7 +242,7 @@ is easily done with <code>at_depth()</code>!</p>
 </div>
 <div id="set-names-of-list-elements" class="section level2">
 <h2>Set names of list elements</h2>
-<pre class="r"><code>name_element &lt;- c(&quot;sqrt()&quot;, &quot;ok?&quot;)
+<pre class="r"><code>name_element <- c(&quot;sqrt()&quot;, &quot;ok?&quot;)
 
 set_names(transposed_list, name_element)</code></pre>
 <pre><code>## $`sqrt()`
@@ -273,7 +273,7 @@ set_names(transposed_list, name_element)</code></pre>
 ## NULL
 ## 
 ## $`ok?`[[4]]
-## &lt;simpleError in sqrt(x = x): non-numeric argument to mathematical function&gt;
+## <simpleError in sqrt(x = x): non-numeric argument to mathematical function&gt;
 ## 
 ## $`ok?`[[5]]
 ## NULL</code></pre>
@@ -288,21 +288,21 @@ set_names(transposed_list, name_element)</code></pre>
 <p>which keeps the intermediary results.</p>
 <p>This function is very general, and you can reduce anything:</p>
 <p>Matrices:</p>
-<pre class="r"><code>mat1 &lt;- matrix(rnorm(10), nrow = 2)
-mat2 &lt;- matrix(rnorm(10), nrow = 2)
-mat3 &lt;- matrix(rnorm(10), nrow = 2)</code></pre>
-<pre class="r"><code>list_mat &lt;- list(mat1, mat2, mat3)
+<pre class="r"><code>mat1 <- matrix(rnorm(10), nrow = 2)
+mat2 <- matrix(rnorm(10), nrow = 2)
+mat3 <- matrix(rnorm(10), nrow = 2)</code></pre>
+<pre class="r"><code>list_mat <- list(mat1, mat2, mat3)
 
 reduce(list_mat, `+`)</code></pre>
 <pre><code>##             [,1]       [,2]       [,3]     [,4]      [,5]
 ## [1,] -2.48530177  1.0110049  0.4450388 1.280802 1.3413979
 ## [2,]  0.07596679 -0.6872268 -0.6579242 1.615237 0.8231933</code></pre>
 <p>even data frames:</p>
-<pre class="r"><code>df1 &lt;- as.data.frame(mat1)
-df2 &lt;- as.data.frame(mat2)
-df3 &lt;- as.data.frame(mat3)
+<pre class="r"><code>df1 <- as.data.frame(mat1)
+df2 <- as.data.frame(mat2)
+df3 <- as.data.frame(mat3)
 
-list_df &lt;- list(df1, df2, df3)
+list_df <- list(df1, df2, df3)
 
 reduce(list_df, dplyr::full_join)</code></pre>
 <pre><code>## Joining, by = c(&quot;V1&quot;, &quot;V2&quot;, &quot;V3&quot;, &quot;V4&quot;, &quot;V5&quot;)
